# magnetar

./: .env  .gitignore  Cargo.toml  README.md  mise.toml
.plans/magnetar/: 00-tooling.md  01-hello-axum.md  02-templates-and-datastar.md  03-postgres-sqlx.md  04-nats-live-updates.md  05-workspace-refactor.md  06-worker-and-jobs.md  07-scheduler.md  08-auth.md  09-teams-and-roles.md  10-incidents-and-polish.md  11-production.md  README.md
.zed/: settings.json
apps/server/: Cargo.toml
apps/server/src/: main.rs  router.rs
crates/bus/: Cargo.toml
crates/bus/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs
crates/web/templates/fragments/: count.html  monitor_list.html
crates/web/templates/layouts/: base.html
crates/web/templates/pages/: home.html  monitors.html
migrations/: 20260614072716_create_monitors.sql
src/: main.rs  subjects.rs
templates/layouts/: base.html
templates/pages/: home.html  monitors.html
