[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
axum = { workspace = true }
datastar = { workspace = true }
futures = { workspace = true }
magnetar-bus = { workspace = true }
magnetar-core = { workspace = true }
magnetar-db = { workspace = true }
magnetar-web = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
